[project]
name = "tracknet24-inference"
version = "0.1.0"
description = "Unified inference script for WASB (TrackNetV2) and VBallNet volleyball ball tracking models"
readme = "00_START_HERE.txt"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "onnxruntime>=1.22.0",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]


[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.22.0",
]
